# mcp-cli

./: .gitignore  pyproject.toml  server_config.json
src/mcp_cli/chat/: chat_handler.py  conversation.py  system_prompt.py  ui_manager.py
src/mcp_cli/commands/: discord_bot.py  register_commands.py
src/mcp_cli/llm/: system_prompt_generator.py
src/mcp_cli/llm/providers/: base.py  ollama_client.py
